--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <% if logged_in? %>
             <li>
               <%= link_to favorites_index_path do %>
-                <%= image_tag "icons/heart.png" %>
+                <%= image_tag 'icons/heart.png' %>
               <% end %>
             </li>
             <li>
