--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,18 +18,15 @@
               <% end %>
             <% end %>
           <%= topic.favorite_users.count %>
-            <%= link_to comments_path(topic_id: topic.id) do %>
+            <%= link_to comments_new_path(topic_id: topic.id) do %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <% end %>
-            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
             <h3>コメント</h3>
-            <% topic.comments.each do |content| %>
-                <p class="topic-text">
-                  <%= comment.content %>
-                </p>
+            <% topic.comments.each do |comment| %>
+              <h3 class="comment"><%= comment.content %></h3>
              <% end %>
           </div>
         </div>
