--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,7 @@
 <div class="top-hero-wrapper text-center">
   <div class="container top-hero-container">
     <h1 class="text-white">Make you Happy</h1>
+    <p>負けない</p>
     <% if logged_in? %>
     <h2 class="text-white">Pictgram is a service that you can post photos.</h2>
     <% end %>
