herokuの課題追加

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="top-hero-wrapper text-center">
   <div class="container top-hero-container">
     <h1 class="text-white">Make you Happy</h1>
-    <p>負けない</p>
+    <p><font size="7" color="red">絶対手に職をつけて転職するぞ！！！！</font></p>
     <% if logged_in? %>
     <h2 class="text-white">Pictgram is a service that you can post photos.</h2>
     <% end %>
